# CE2103-Proyecto1-Scrabble

./: CMakeLists.txt  ClientSocket.cpp  ClientSocket.h  README.md  ServerSocket.cpp  ServerSocket.h  Socket.cpp  Socket.h  SocketException.cpp  SocketException.h  simple_client_main.cpp  simple_client_main.h  simple_server_main.cpp  simple_server_main.h
Logica/: CMakeLists.txt  main.cpp
cliente/: ArchivoTexto.cpp  ArchivoTexto.h  CMakeLists.txt  Serial.cpp  Serial.h  TCPclient.cpp  TCPclient.h  main.cpp
interfaz/: CMakeLists.txt  ListaT.h  TCPclient.h  main.cpp  utiles.h
servidor/: ArchivoTexto.cpp  ArchivoTexto.h  CMakeLists.txt  JsonDoc.cpp  JsonDoc.h  Jugador.h  Lista.h  ListaLetras.h  ListaT.h  ListaTJugador.h  Matrix.h  Matriz.h  Nodo.h  NodoT.h  Partida.h  Serial.cpp  Serial.h  TCPserver.cpp  TCPserver.h  ThreadPool.h  main.cpp
